--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,28 @@
 # site settings
 
-title: cvless
-description: Jekyll theme for a beautiful online CV
-taglong: Jekyll theme for a beautiful online CV
-tagshort: Jekyll theme
-url: https://cvless.netlify.app
+title: sumantmanne.com
+description: sumantmanne.com
+url: https://sumantmanne.com
 baseurl: ""
 permalink: pretty
-repo: https://github.com/username/username.github.io
+repo: https://github.com/dpyro/dpyro.github.io
+archive: false
 
 # author settings
 
 author:
-  name: Place Holder
-  email: username@domain.com
+  name: Sumant Manne
+  email: me@sumantmanne.com
 photo: /assets/jpg/photo.jpg
 
 # social media links
 
 social:
-  facebook: username
-  github: username
-  instagram: username
-  linkedin: username
-  stackoverflow: 0000000/username
-  twitter: username
+  github: dpyro
+  instagram: mocha.latte.cappuccino
+  linkedin: sumantmanne
+  email: me@sumantmanne.com
+  cv: false
 
 # build settings
 
